--- a/src/product/templates/products/list copy.html
+++ b/src/product/templates/products/list copy.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Products </h1>
+        <h1 class="h3 mb-0 text-gray-800">Products</h1>
     </div>
 
 
@@ -16,18 +16,8 @@
                     <input type="text" name="title" placeholder="Product Title" class="form-control">
                 </div>
                 <div class="col-md-2">
-                
                     <select name="variant" id="" class="form-control">
                         <option selected disabled>--Select A Variant--</option>
-                         {% for key, values in variants.items %}
-                        
-                        <option disabled >{{key}}</option>
-                            {% for choice in values %}
-                             
-                            <option value="{{choice.0}}">  &nbsp;&nbsp;{{choice.1}}</option>
-                            
-                            {%endfor%}
-                         {%endfor%}
 
                     </select>
                 </div>
@@ -65,35 +55,22 @@
                     </thead>
 
                     <tbody>
-
-                    {% for product in  products %}
-                     {% with sl=forloop.counter0|add:1 %}
-
                     <tr>
-                        <td> {{ sl }}</td>
-                        <td>{{product.title}} <br> Created at : {{product.created_at}}</td>
-                        <td>{{product.description}}</td>
+                        <td>1</td>
+                        <td>T-Shirt <br> Created at : 25-Aug-2020</td>
+                        <td>Quality product in low cost</td>
                         <td>
-                        {% comment %} {% for choice in product.productvariant_set.all %}
-                                     <p>{{choice.variant.title}} </p>
-                                     {% endfor %} {% endcomment %}
-                            
-                            <dl class="row mb-0" style="height: 80px; overflow: hidden" id="variant{{ sl }}">
-                                {% for choice in product.productvariantprice_set.all %}
+                            <dl class="row mb-0" style="height: 80px; overflow: hidden" id="variant">
                                 <dt class="col-sm-3 pb-0">
-                                    {% comment %} XL/ Black/ Full {% endcomment %}
-                                    
-                                     {{choice.product_variant_one.variant_title}}/ {{choice.product_variant_two.variant_title}}/ {{choice.product_variant_three.variant_title}}
-                                     
+                                    XL/ Black/ Full
                                 </dt>
                                 <dd class="col-sm-9">
                                     <dl class="row mb-0">
-                                        <dd class="col-sm-4 pb-0">{{choice.price}}</dd>
-                                        <dd class="col-sm-8 pb-0">{{choice.stock}}.</dd>
+                                        <dd class="col-sm-4 pb-0">Price : 200.0</dd>
+                                        <dd class="col-sm-8 pb-0">InStock : 50.</dd>
                                     </dl>
                                 </dd>
-                                {% endfor %}
-                                {% comment %} <dt class="col-sm-3 pb-0">
+                                <dt class="col-sm-3 pb-0">
                                     XL/ Black/ Half
                                 </dt>
                                 <dd class="col-sm-9">
@@ -119,10 +96,9 @@
                                         <dd class="col-sm-4 pb-0">Price : 200.0</dd>
                                         <dd class="col-sm-8 pb-0">InStock : 50.</dd>
                                     </dl>
-                                </dd> {% endcomment %}
+                                </dd>
                             </dl>
-                            
-                            <button onclick="$('#variant{{ sl }}').toggleClass('h-auto')" class="btn btn-sm btn-link">Show more
+                            <button onclick="$('#variant').toggleClass('h-auto')" class="btn btn-sm btn-link">Show more
                             </button>
                         </td>
                         <td>
@@ -131,8 +107,6 @@
                             </div>
                         </td>
                     </tr>
-                    {% endwith %}
-                    {% endfor %}
                     </tbody>
 
                 </table>
